--- a/Example/ios/Podfile
+++ b/Example/ios/Podfile
@@ -1,10 +1,10 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'RNAudioVideoTools' do
-  pod 'react-native-ffmpeg/min-gpl-lts', :podspec => '../node_modules/react-native-ffmpeg/react-native-ffmpeg.podspec'
+  pod 'react-native-ffmpeg/full-gpl', :podspec => '../node_modules/react-native-ffmpeg/react-native-ffmpeg.podspec'
 
   config = use_native_modules!
 
@@ -23,10 +23,10 @@ target 'RNAudioVideoTools' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  # use_flipper!
+  # post_install do |installer|
+  #   flipper_post_install(installer)
+  # end
 end
 
 target 'RNAudioVideoTools-tvOS' do
