--- a/Example/package.json
+++ b/Example/package.json
@@ -22,15 +22,15 @@
     "react-native-document-picker": "^3.5.4",
     "react-native-dropdown-picker": "^3.6.8",
     "react-native-elements": "^2.3.2",
-    "react-native-ffmpeg": "^0.4.4",
+    "react-native-ffmpeg": "0.5.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.13.0",
-    "react-native-root-siblings": "^4.0.6",
+    "react-native-root-siblings": "^4.1.0",
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
-    "react-native-vector-icons": "^7.1.0",
+    "react-native-vector-icons": "8.1.0",
     "react-native-video": "^4.4.5",
     "rn-fetch-blob": "^0.12.0"
   },
